# secsgml2

./: .gitignore  .gitmodules  pyproject.toml  readme.md  setup.py
.github/workflows/: wheels.yml
secsgml2/: __init__.py  _core.c  _core.pyx  utils.py  uu.c  uu.pyx
test/: test.py
