[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secsgml2"
version = "0.1.1"
requires-python = ">=3.11"

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "pp* *-musllinux_*"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
# Compiler flags: O3, native only on x86_64 (aarch64 is emulated via QEMU,
# "native" there would mean the host x86_64 cpu, which is wrong)
environment = { CFLAGS = "-O3" }

[tool.cibuildwheel.macos]
# Each arch runs on its own native runner (see workflow), so "native" is safe
archs = ["native"]
environment = { CFLAGS = "-O3" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]
# MSVC flags go here; CFLAGS doesn't work reliably for MSVC
# We handle this in setup.py instead (see below)